--- a/style/layouts/section.css
+++ b/style/layouts/section.css
@@ -2,20 +2,23 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+
   gap: var(--dimen-layout-gap);
   margin-top: var(--dimen-layout-gap--main);
   padding: 0 var(--dimen-layout-main-margin);
 
+  & .weather__sumary,
+  & .future__forecast {
+    background-color: var(--color-white);
+    border-radius: var(--dimen-layout-main-margin);
+    padding: var(--dimen-layout-main-margin);
+  }
+
   & .weather__sumary {
-    width: 90%;
     height: fit-content;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    background-color: var(--color-white);
-    border-radius: var(--dimen-layout-main-margin);
-    padding: var(--dimen-layout-main-margin);
 
     & .weather__sumary-header {
       width: fit-content;
@@ -51,5 +54,8 @@
         gap: 0.5rem;
       }
     }
+  }
+
+  & .future__forecast {
   }
 }
