--- a/style/layouts/forecastListItem.css
+++ b/style/layouts/forecastListItem.css
@@ -1,3 +1,28 @@
 .forecast__list-item {
+  display: grid;
+  grid-template-columns: repeat(2, min-content) 1fr;
+  grid-template-rows: repeat(3, min-content);
+  gap: 0.5rem;
+
+  & .dateTxt {
+    grid-column-start: 1;
+    grid-row: 1 / 2;
+  }
+
+  & .weatherIcon {
+    grid-column-start: 1;
+    grid-row: 2 / 4;
+  }
+
+  & .upperTmp {
+    grid-row: 2 / 3;
+  }
+
+  & .lowerTmp {
+    grid-row: 3 / 4;
+  }
+}
+
+.forecast__list-item:not(:last-child) {
   border-bottom: 1px solid var(--color-main-background);
 }
