--- a/style/base/typography.css
+++ b/style/base/typography.css
@@ -2,6 +2,26 @@
   color: var(--color-black);
 }
 
+.text--xl {
+  font-size: 2.4rem;
+}
+
+.text--lg {
+  font-size: 2rem;
+}
+
+.text--md {
+  font-size: 1.6rem;
+}
+
+.text--sm {
+  font-size: 1.2rem;
+}
+
+.text--xs {
+  font-size: 1rem;
+}
+
 .text--bold {
   font-weight: 700;
 }
